--- a/people.html
+++ b/people.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me">Mobirise</a></section><section class="header1 cid-qSUVEFApmU mbr-parallax-background" id="header1-4f">
+<section class="engine"><a href="https://mobirise.me/f">simple site maker</a></section><section class="header1 cid-qSUVEFApmU mbr-parallax-background" id="header1-4f">
 
     
 
