--- a/theteam.html
+++ b/theteam.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/p">website templates free download</a></section><section class="testimonials4 cid-qT2sgoLBJK mbr-parallax-background" id="testimonials4-5u">
+<section class="engine"><a href="https://mobirise.me/z">best website templates</a></section><section class="testimonials4 cid-qT2sgoLBJK mbr-parallax-background" id="testimonials4-5u">
 
   
 
@@ -162,7 +162,7 @@
         <div class="user row">
           <div class="col-lg-3 col-md-4">
             <div class="user_image">
-              <img src="assets/images/10382282-10152511590761032-3323896290021002936-o-e1465405627257-300x3002.jpg" alt="" title="">
+              <img src="assets/images/10382282-10152511590761032-3323896290021002936-o-e1465405627257-300x3000.jpg" alt="" title="">
             </div>
           </div>
           <div class="testimonials-caption col-lg-9 col-md-8">
