--- a/databasics.html
+++ b/databasics.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/z">best html templates</a></section><section class="header1 cid-qT2a4SwBe1 mbr-parallax-background" id="header1-58">
+<section class="engine"><a href="https://mobirise.me/q">free responsive website templates</a></section><section class="header1 cid-qT2a4SwBe1 mbr-parallax-background" id="header1-58">
 
     
 
@@ -259,7 +259,7 @@
                     </div></div>
             </div>
             <div class="row row-copirayt">
-                <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-7">Early African American Film Website Revamp<br>UCLA DH199 Capstone 2018 • Meet the Redesign Team<br>© Copyright 2017 Mobirise - All Rights Reserved
+                <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-7">Early African American Film Website Revamp&nbsp;• <a href="page12.html">Meet the Redesign Team</a>&nbsp;<br>UCLA DH199 Capstone 2018 • <a href="http://dhbasecamp.humanities.ucla.edu/afamfilm/" target="_blank" class="text-primary">Check Out the Original Site</a><br>© Copyright 2017 Mobirise - All Rights Reserved
                 </p>
             </div>
         </div>
