--- a/fullbibliography.html
+++ b/fullbibliography.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/u">bootstrap html templates</a></section><section class="header1 cid-qSUWub8uPE" id="header1-4l">
+<section class="engine"><a href="https://mobirise.me/f">easy website maker</a></section><section class="header1 cid-qSUWub8uPE" id="header1-4l">
 
     
 
@@ -112,7 +112,7 @@
                     </div></div>
             </div>
             <div class="row row-copirayt">
-                <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-7">Early African American Film Website Revamp<br>UCLA DH199 Capstone 2018 • Meet the Redesign Team<br>© Copyright 2017 Mobirise - All Rights Reserved
+                <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-7">Early African American Film Website Revamp&nbsp;• <a href="page12.html">Meet the Redesign Team</a>&nbsp;<br>UCLA DH199 Capstone 2018 • <a href="http://dhbasecamp.humanities.ucla.edu/afamfilm/" target="_blank" class="text-primary">Check Out the Original Site</a><br>© Copyright 2017 Mobirise - All Rights Reserved
                 </p>
             </div>
         </div>
