--- a/productioncompanies.html
+++ b/productioncompanies.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/r">bootstrap template</a></section><section class="header1 cid-qSUVXrF9jI mbr-parallax-background" id="header1-4h">
+<section class="engine"><a href="https://mobirise.me/y">html site templates</a></section><section class="header1 cid-qSUVXrF9jI mbr-parallax-background" id="header1-4h">
 
     
 
@@ -114,7 +114,7 @@
                     </div></div>
             </div>
             <div class="row row-copirayt">
-                <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-7">Early African American Film Website Revamp<br>UCLA DH199 Capstone 2018 • Meet the Redesign Team<br>© Copyright 2017 Mobirise - All Rights Reserved
+                <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-7">Early African American Film Website Revamp&nbsp;• <a href="page12.html">Meet the Redesign Team</a>&nbsp;<br>UCLA DH199 Capstone 2018 • <a href="http://dhbasecamp.humanities.ucla.edu/afamfilm/" target="_blank" class="text-primary">Check Out the Original Site</a><br>© Copyright 2017 Mobirise - All Rights Reserved
                 </p>
             </div>
         </div>
