create github pages

--- a/definition.html
+++ b/definition.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/w">free html5 templates</a></section><section class="header1 cid-qSURqx0zPA mbr-parallax-background" id="header1-4d">
+<section class="engine"><a href="https://mobirise.me/b">create a site</a></section><section class="header1 cid-qSURqx0zPA mbr-parallax-background" id="header1-4d">
 
     
 
@@ -255,7 +255,7 @@
                     </div></div>
             </div>
             <div class="row row-copirayt">
-                <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-7">Early African American Film Website Revamp&nbsp;• <a href="page12.html">Meet the Redesign Team</a>&nbsp;<br>UCLA DH199 Capstone 2018 • <a href="http://dhbasecamp.humanities.ucla.edu/afamfilm/" target="_blank" class="text-primary">Check Out the Original Site</a><br>© Copyright 2017 Mobirise - All Rights Reserved
+                <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-7">Early African American Film Website Revamp&nbsp;• <a href="theredesignteam.html">Meet the Redesign Team</a>&nbsp;<br>UCLA DH199 Capstone 2018 • <a href="http://dhbasecamp.humanities.ucla.edu/afamfilm/" target="_blank" class="text-primary">Check Out the Original Site</a><br>© Copyright 2017 Mobirise - All Rights Reserved
                 </p>
             </div>
         </div>
