--- a/films.html
+++ b/films.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/z">best free website templates</a></section><section class="header1 cid-qSUUWbeNWN mbr-parallax-background" id="header1-4e">
+<section class="engine"><a href="https://mobirise.me/l">free website templates</a></section><section class="header1 cid-qSUUWbeNWN mbr-parallax-background" id="header1-4e">
 
     
 
@@ -161,7 +161,7 @@
                     </div></div>
             </div>
             <div class="row row-copirayt">
-                <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-7">Early African American Film Website Revamp&nbsp;• <a href="page12.html">Meet the Redesign Team</a>&nbsp;<br>UCLA DH199 Capstone 2018 • <a href="http://dhbasecamp.humanities.ucla.edu/afamfilm/" target="_blank" class="text-primary">Check Out the Original Site</a><br>© Copyright 2017 Mobirise - All Rights Reserved
+                <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-7">Early African American Film Website Revamp&nbsp;• <a href="theredesignteam.html">Meet the Redesign Team</a>&nbsp;<br>UCLA DH199 Capstone 2018 • <a href="http://dhbasecamp.humanities.ucla.edu/afamfilm/" target="_blank" class="text-primary">Check Out the Original Site</a><br>© Copyright 2017 Mobirise - All Rights Reserved
                 </p>
             </div>
         </div>
